@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-13T08:20:10Z",
+  "timestamp" : "2022-07-13T16:23:59Z",
   "count_outdated" : 355,
   "uniques_outdated" : 224,
-  "count" : 381,
+  "count" : 382,
   "uniques" : 240,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
