@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 2,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
