@@ -1,3 +1,10 @@
+2022-07-13T16:23:59Z:
+* notice: last 14d: unq all: 2 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 224 355 / 240 381
+* notice: next accum: outdated-unq outdated-all / unq all: 224 355 / 240 382
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-13]
+
 2022-07-13T08:20:10Z:
 * notice: last 14d: unq all: 2 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 224 355 / 239 381
